--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,63 @@
-anaconda-catalogs==0.2.0
-anaconda-cloud-auth==0.1.3
-anaconda-navigator==2.5.0
-anaconda-project==0.11.1
-astropy==5.1
-autopep8==1.6.0
-bottleneck==1.3.5
-brotlipy==0.7.0
-category-encoders==2.6.3
-conda-build==3.26.1
-conda-libmamba-solver==23.7.0
-conda-repo-cli==1.0.75
-conda-token==0.4.0
-conda-verify==3.4.2
-cytoolz==0.12.0
-datasets==2.12.0
-datashader==0.15.2
-distributed==2023.6.0
-flake8==6.0.0
-flask==2.2.2
-gensim==4.3.0
-h5py==3.9.0
-hvplot==0.8.4
-imagecodecs==2023.1.23
-imbalanced-learn==0.10.1
-jupyter==1.0.0
-jupyterlab==3.6.3
-kaleido==0.2.1
-lmdb==1.4.1
-lz4==4.3.2
-mkl-fft==1.3.8
-mkl-random==1.2.4
-munkres==1.1.4
-navigator-updater==0.4.0
-nltk==3.8.1
-openpyxl==3.0.10
-pep8==1.7.1
-pip-chill==1.0.3
-plotly==5.9.0
-pycurl==7.45.2
-pydocstyle==6.3.0
-pyodbc==4.0.34
-pysocks==1.7.1
-pytest==7.4.0
-python-snappy==0.6.1
-rope==1.7.0
-ruamel-yaml-conda==0.17.21
-s3fs==2023.4.0
-scikit-image==0.20.0
-scikit-learn-intelex==20230426.121932
-scrapy==2.8.0
-seaborn==0.12.2
-sip==6.6.2
-spyder==5.4.3
-sqlalchemy==1.4.39
-streamlit==1.33.0
-sympy==1.11.1
-tables==3.8.0
-tabulate==0.8.10
-tbb==0.2
-transformers==4.32.1
-ucimlrepo==0.0.3
-unidecode==1.2.0
-whatthepatch==1.0.2
-win-inet-pton==1.1.0
-xlwings==0.29.1
-yapf==0.31.0
+streamlit==1.23.1
+pandas==2.0.2
+matplotlib==3.7.1
+numpy==1.24.3
+altair==5.0.1
+attrs==23.1.0
+blinker==1.6.2
+cachetools==5.3.1
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+cloudpickle==2.2.1
+colorama==0.4.6
+contourpy==1.0.7
+cycler==0.11.0
+decorator==5.1.1
+fonttools==4.39.4
+gitdb==4.0.10
+GitPython==3.1.31
+idna==3.4
+importlib-metadata==6.6.0
+Jinja2==3.1.2
+joblib==1.2.0
+jsonschema==4.17.3
+kiwisolver==1.4.4
+llvmlite==0.40.0
+markdown-it-py==2.2.0
+MarkupSafe==2.1.3
+mdurl==0.1.2
+numba==0.57.0
+packaging==23.1
+Pillow==9.5.0
+protobuf==4.23.2
+pyarrow==12.0.0
+pydeck==0.8.1b0
+Pygments==2.15.1
+Pympler==1.0.1
+pyparsing==3.0.9
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+requests==2.31.0
+rich==13.4.1
+scikit-learn==1.2.2
+scipy==1.10.1
+shap==0.41.0
+six==1.16.0
+slicer==0.0.7
+smmap==5.0.0
+tenacity==8.2.2
+threadpoolctl==3.1.0
+toml==0.10.2
+toolz==0.12.0
+tornado==6.3.2
+tqdm==4.65.0
+typing_extensions==4.6.3
+tzdata==2023.3
+tzlocal==4.3
+urllib3==2.0.2
+validators==0.20.0
+watchdog==3.0.0
+zipp==3.15.0
